# TODO-FastApi

./: database.db  pyproject.toml
fastapi_curd/: main.py
