[tool.poetry]
name = "fastapi-curd"
version = "0.1.0"
description = ""
authors = ["Muhammad Sufiyan Baig <125275620+hasan912@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlmodel = "^0.0.16"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
